[project]
name = "langchain-google-alloydb-pg"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud AlloyDB for PostgreSQL"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "google-cloud-alloydb-connector[asyncpg]",
    "google-cloud-storage",
    "langchain-core",
    "numpy",
    "pgvector",
    "SQLAlchemy[asyncio]"
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_alloydb_pg.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-alloydb-pg-python"
Repository = "https://github.com/googleapis/langchain-google-alloydb-pg-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-alloydb-pg-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-alloydb-pg-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_incomplete_defs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
